# mesh-graph

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
.zed/: debug.json  tasks.json
docs/: can_collapse.monojson  he_flip.monojson  merge_one_ring.af
docs/face/: connectivity.afdesign
docs/halfedge/: connectivity.afdesign
docs/vertex/: connectivity.af  connectivity.afdesign
src/: access.rs  iter.rs  lib.rs  primitives.rs  rerun_impl.rs  selection.rs  serialize.rs  utils.rs
src/elements/: face.rs  halfedge.rs  mod.rs  vertex.rs
src/integrations/: bevy.rs  delaunay.rs  gltf.rs  mod.rs
src/ops/: cleanup.rs  collapse.rs  create.rs  delete.rs  edit.rs  insert.rs  merge.rs  mod.rs  query.rs  remove.rs  subdivide.rs  transform.rs
src/ops/add/: edge.rs  face.rs  mod.rs  vertex.rs
src/ops/cleanup/: edge_boundary.rs  merge.rs  mod.rs  vertex_neighborhood.rs
src/ops/cleanup/test/: merge_common_except_one_two.glb  merge_common_one_ring.glb
src/ops/glb/: can_collapse_edge.glb  cannot_collapse_edge.glb  cube.glb  cube_w_missing_triangle.glb
src/ops/merge_one_ring/: mod.rs  tests.rs
src/ops/merge_one_ring/glb/: merge_4_4.glb  merge_6_6_tip.glb  merge_6_6_tube.glb  merge_common_deg_face.glb  merge_common_double_flap.glb  merge_common_except_one.glb  merge_common_one_4_9.glb  merge_common_one_vert.glb  merge_common_two_5_8.glb  merge_common_two_consec_vs_one_he_9_10.glb  merge_common_two_hes_hole.glb  merge_common_two_one_separate.glb  merge_common_two_vs_3_4.glb  merge_common_vert_he_tube.glb  merge_connected_hes.glb
src/ops/test/: merge_common_single_he.glb
src/plane_slice/: hash_grid.rs  mod.rs  polygon.rs
