[package]
name = "mesh-graph"
version = "0.3.2"
edition = "2024"
categories = ["algorithms", "graphics", "mathematics"]
description = "Fast halfedge triangle mesh graph in pure Rust "
exclude = ["examples/", "tests/"]
keywords = ["3D", "halfedge-graph", "mesh", "real-time", "topology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Synphonyte/mesh-graph"

[dependencies]
anyhow = "1"
bevy = { version = "0.17", optional = true }
cfg-if = { version = "1", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = "0.30"
hashbrown = "0.16.0"
itertools = "0.14"
lazy_static = { version = "1.5.0", optional = true }
parry3d = "0.25"
rerun = { version = "0.26", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"
tracing = "0.1.41"

[features]
default = []
bevy = ["dep:bevy"]
rerun = ["dep:cfg-if", "dep:lazy_static", "dep:rerun"]
serde = ["dep:serde", "glam/serde", "hashbrown/serde", "slotmap/serde"]
