[package]
name = "mesh-graph"
version = "0.5.0"
edition = "2024"
categories = ["algorithms", "graphics", "mathematics"]
description = "Fast halfedge triangle mesh graph in pure Rust "
exclude = ["examples/", "tests/"]
keywords = ["3D", "halfedge-graph", "mesh", "real-time", "topology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Synphonyte/mesh-graph"

[dependencies]
anyhow = "1"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_mesh",
], optional = true }
cfg-if = { version = "1", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = "0.30"
gltf = { version = "1.4", optional = true }
hashbrown = "0.16"
itertools = "0.14"
lazy_static = { version = "1.5.0", optional = true }
parry3d = "0.26"
rerun = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"
tracing = { version = "0.1", features = ["release_max_level_off"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
bevy = ["dep:bevy"]
gltf = ["dep:gltf"]
rerun = ["dep:cfg-if", "dep:lazy_static", "dep:rerun"]
serde = ["dep:serde", "glam/serde", "hashbrown/serde", "slotmap/serde"]

[[bin]]
name = "vertex-neighborhood"
path = "src/bin/vn.rs"
