[package]
categories = ["algorithms", "graphics", "mathematics"]
description = "Fast halfedge triangle mesh graph in pure Rust "
edition = "2024"
exclude = ["examples/", "tests/"]
keywords = ["3D", "halfedge-graph", "mesh", "real-time", "topology"]
license = "MIT"
name = "mesh-graph"
readme = "README.md"
repository = "https://github.com/Synphonyte/mesh-graph"
version = "0.7.0"

[dependencies]
anyhow = "1"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_mesh",
], optional = true }
cfg-if = { version = "1", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = "0.33"
gltf = { version = "1.4", optional = true, features = ["extras"] }
hashbrown = "0.17"
itertools = "0.15"
lazy_static = { version = "1.5.0", optional = true }
parry3d = "0.28"
rerun = { version = "0.33", default-features = false, optional = true, features = [
    "sdk",
] }
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
bevy = ["dep:bevy"]
default = []
gltf = ["dep:gltf"]
rerun = ["dep:cfg-if", "dep:lazy_static", "dep:rerun"]
serde = ["dep:serde", "glam/serde", "hashbrown/serde", "slotmap/serde"]

[[bin]]
name = "vertex-neighborhood"
path = "src/bin/vn.rs"
required-features = ["gltf"]
